--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "core-js": "^3.6.5",
     "vue": "^3.0.0-0",
     "vue-router": "^4.0.0-0",
+    "vue-toastification": "^1.7.6",
     "vuex": "^4.0.0-0"
   },
   "devDependencies": {
